--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "image-webpack-loader": "^7.0.1",
     "jquery": "^3.5.1",
+    "jquery.easing": "^1.4.1",
     "next": "10.0.6",
     "next-images": "^1.7.0",
     "react": "17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0"
   }
