--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery.easing": "^1.4.1",
     "next": "10.0.6",
     "next-images": "^1.7.0",
+    "nodemailer": "^6.4.17",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "17.0.1",
